Add Fly.io deployment configuration and resolve merge conflicts
- Add complete Fly.io deployment setup with GitHub Actions
- Add Dockerfile with multi-stage build using Bun
- Add fly.toml with production configuration
- Add deployment scripts and documentation
- Switch to @sveltejs/adapter-node for reliable production builds
- Configure port 3000 for both development and production
- Switch from npm to Bun (remove package-lock.json, add bun.lock)
- Resolve merge conflicts in landing page components
- Environment variables automatically sync from GitHub Secrets to Fly.io

--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
+		"start": "PORT=3000 bun run build/index.js",
+		"deploy": "fly deploy",
+		"deploy:script": "./scripts/deploy.sh",
+		"fly:setup": "fly launch --no-deploy",
+		"fly:logs": "fly logs",
+		"fly:status": "fly status",
 		"prepare": "svelte-kit sync || echo ''",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint ."
@@ -33,6 +39,7 @@
 	},
 	"dependencies": {
 		"@fontsource/inter": "^5.2.5",
+		"@sveltejs/adapter-node": "^5.2.13",
 		"appwrite": "^14.0.1",
 		"dotenv": "^16.5.0",
 		"marked": "^15.0.12"
