--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
+      - name: Format code
+        run: bun run format
+
       - name: Run linting
         run: bun run lint
 
@@ -33,11 +36,6 @@ jobs:
 
       - name: Setup flyctl
         uses: superfly/flyctl-actions/setup-flyctl@master
-
-      - name: Set Fly.io secrets
-        run: |
-          flyctl secrets set PUBLIC_APPWRITE_ENDPOINT="${{ secrets.PUBLIC_APPWRITE_ENDPOINT }}" --stage
-          flyctl secrets set PUBLIC_APPWRITE_PROJECT_ID="${{ secrets.PUBLIC_APPWRITE_PROJECT_ID }}" --stage
 
       - name: Deploy to Fly.io
         run: flyctl deploy --remote-only
