--- a/fly.toml
+++ b/fly.toml
@@ -10,9 +10,8 @@ PORT = '3000'
 [http_service]
 internal_port = 3000
 force_https = true
-auto_stop_machines = 'stop'
-auto_start_machines = false
-min_machines_running = 0
+auto_start_machines = true
+min_machines_running = 1
 
 [[http_service.checks]]
 interval = '30s'
